--- a/index.html
+++ b/index.html
@@ -8,50 +8,151 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <section id="home">
     <nav>
         <ul>
-            <li class="brand"><img class="btn" src="logo.png" alt="Spotify"> Spotify</li>
-            <li>Home</li>
-            <li>About</li> 
+            <li class="brand"><img class="btn" src="images/logo.png" alt="Spotify"> Spotify</li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn" onclick="window.location.href='index.html'">Home</button>
+                    <div class="dropdown-content">
+                      <a href="#languages">Languages</a>
+                      <a href="#categories">Categories</a>
+                      <a href="#albums">Albums</a>
+                    </div>
+                </div>
+            </li>
+            <li><a href="#">About</a></li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">Dropdown 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="#">Link 1</a>
+                      <a href="#">Link 2</a>
+                      <a href="#">Link 3</a>
+                    </div>
+                </div>
+            </li>
         </ul>
     </nav>
+    </section>
+    <div class="container">
+        <div class="songList">
+            <h1>Best of NCS - No Copyright Sounds</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="general/covers/cover1.jpg" alt="1">
+                    <span class="songName">Your Eyes</span>
+                    <span class="songlistplay"><span class="timestamp">2:51<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover2.jpg" alt="1">
+                    <span class="songName">Play Date</span>
+                    <span class="songlistplay"><span class="timestamp">2:59<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover3.jpg" alt="1">
+                    <span class="songName">SaiRat Zaale ji</span>
+                    <span class="songlistplay"><span class="timestamp">6:10<i id="2" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover4.jpg" alt="1">
+                    <span class="songName">Shikhayat</span>
+                    <span class="songlistplay"><span class="timestamp">4:09<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover5.jpg" alt="1">
+                    <span class="songName">Love Story</span>
+                    <span class="songlistplay"><span class="timestamp">3:56<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover6.jpg" alt="1">
+                    <span class="songName">Day Dreamin</span>
+                    <span class="songlistplay"><span class="timestamp">2:53<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover7.jpg" alt="1">
+                    <span class="songName">Tera Chehra</span>
+                    <span class="songlistplay"><span class="timestamp">4:34<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover8.jpg" alt="1">
+                    <span class="songName">Kolu Kolu</span>
+                    <span class="songlistplay"><span class="timestamp">4:01<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover9.jpg" alt="1">
+                    <span class="songName">Jab Saiyaan</span>
+                    <span class="songlistplay"><span class="timestamp">4:07<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="general/covers/cover10.jpg" alt="1">
+                    <span class="songName">Naa Madhi</span>
+                    <span class="songlistplay"><span class="timestamp">2:54<i id="9" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                </div>
+            </div>
+        </div>
+        <div class="songBanner"></div>
+    </div>
     <div class="songclassification">
+        <section id="languages">
         <div class="languages">
             <table align="center">
-                <h3>LANGUAGES</h3>
+                <h3 align="center">LANGUAGES</h3>
                 <tr>
-                    <td><input type="image" class="btn1" src="telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="english.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
                 </tr>
             </table>
         </div>
-        <div class="languages">
+        </section>
+        <section id="categories">
+        <div class="categories">
             <table align="center">
-                <h3>LANGUAGES</h3>
+                <h3 align="center">CATEGORIES</h3>
                 <tr>
-                    <td><input type="image" class="btn1" src="telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="english.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
                 </tr>
             </table>
         </div>
-        <div class="languages">
+        </section>
+        <section id="albums">
+        <div class="Albums">
             <table align="center">
-                <h3>LANGUAGES</h3>
+                <h3 align="center">ALBUMS</h3>
                 <tr>
-                    <td><input type="image" class="btn1" src="telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="english.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
                 </tr>
             </table>
         </div>
-
+        </section>
+    </div>
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fa-solid fa-2x fa-backward-step" id="previous"></i>
+            <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
+            <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
+        </div>
+        <div class="songInfo">
+            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
