--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="title">Spotify - Your favourite music is here</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -100,7 +100,9 @@
         <section id="languages">
         <div class="languages">
             <table align="center">
+                <div class="heading">
                 <h3 align="center">LANGUAGES</h3>
+                </div>
                 <tr>
                     <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
                     <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
@@ -114,7 +116,9 @@
         <section id="categories">
         <div class="categories">
             <table align="center">
+                <div class="heading">
                 <h3 align="center">CATEGORIES</h3>
+                </div>
                 <tr>
                     <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
                     <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
@@ -128,7 +132,9 @@
         <section id="albums">
         <div class="Albums">
             <table align="center">
+                <div class="heading">
                 <h3 align="center">ALBUMS</h3>
+                </div>
                 <tr>
                     <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
                     <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
