--- a/telugu.html
+++ b/telugu.html
@@ -11,7 +11,16 @@
     <nav>
         <ul>
             <li class="brand"><img class="btn" src="images/logo.png" alt="Spotify"> Spotify</li>
-            <li><a href="index.html">Home</a></li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn" onclick="window.location.href='index.html'">Home</button>
+                    <div class="dropdown-content">
+                      <a href="#languages">Languages</a>
+                      <a href="#categories">Categories</a>
+                      <a href="#albums">Albums</a>
+                    </div>
+                </div>
+            </li>
             <li><a href="#">About</a></li>
             <li>
                 <div class="dropdown">
