--- a/telugu.html
+++ b/telugu.html
@@ -15,9 +15,9 @@
                 <div class="dropdown">
                     <button class="dropbtn" onclick="window.location.href='index.html'">Home</button>
                     <div class="dropdown-content">
-                      <a href="#languages">Languages</a>
-                      <a href="#categories">Categories</a>
-                      <a href="#albums">Albums</a>
+                      <a href="index.html#languages">Languages</a>
+                      <a href="index.html#categories">Categories</a>
+                      <a href="index.html#albums">Albums</a>
                     </div>
                 </div>
             </li>
@@ -42,70 +42,113 @@
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers/cover1.jpg" alt="1">
-                    <span class="songName">Your Eyes</span>
-                    <span class="songlistplay"><span class="timestamp">2:51<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover1.jpg" alt="1">
+                    <span class="songName">Mastaaru Mastaaru</span>
+                    <span class="songlistplay"><span class="timestamp">4:07<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover2.jpg" alt="1">
-                    <span class="songName">Play Date</span>
-                    <span class="songlistplay"><span class="timestamp">2:59<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover2.jpeg" alt="1">
+                    <span class="songName">Nee Paata Madhuram</span>
+                    <span class="songlistplay"><span class="timestamp">4:23<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover3.jpg" alt="1">
-                    <span class="songName">SaiRat Zaale ji</span>
-                    <span class="songlistplay"><span class="timestamp">6:10<i id="2" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover3.jpeg" alt="1">
+                    <span class="songName">Vikram Title track</span>
+                    <span class="songlistplay"><span class="timestamp">3:38<i id="2" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover4.jpg" alt="1">
-                    <span class="songName">Shikhayat</span>
-                    <span class="songlistplay"><span class="timestamp">4:09<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover4.jpeg" alt="1">
+                    <span class="songName">Naatu Naatu</span>
+                    <span class="songlistplay"><span class="timestamp">3:34<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover5.jpg" alt="1">
-                    <span class="songName">Love Story</span>
-                    <span class="songlistplay"><span class="timestamp">3:56<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover5.jpeg" alt="1">
+                    <span class="songName">Buttabomma</span>
+                    <span class="songlistplay"><span class="timestamp">3:18<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover6.jpg" alt="1">
-                    <span class="songName">Day Dreamin</span>
-                    <span class="songlistplay"><span class="timestamp">2:53<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover6.jpeg" alt="1">
+                    <span class="songName">Maate Vinadhuga</span>
+                    <span class="songlistplay"><span class="timestamp">4:35<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover7.jpg" alt="1">
-                    <span class="songName">Tera Chehra</span>
-                    <span class="songlistplay"><span class="timestamp">4:34<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover7.jpeg" alt="1">
+                    <span class="songName">Top Lesi Poddi</span>
+                    <span class="songlistplay"><span class="timestamp">4:17<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover8.jpg" alt="1">
-                    <span class="songName">Kolu Kolu</span>
-                    <span class="songlistplay"><span class="timestamp">4:01<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover8.jpeg" alt="1">
+                    <span class="songName">Megham Karigena</span>
+                    <span class="songlistplay"><span class="timestamp">4:50<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover9.jpg" alt="1">
-                    <span class="songName">Jab Saiyaan</span>
-                    <span class="songlistplay"><span class="timestamp">4:07<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover9.jpeg" alt="1">
+                    <span class="songName">Po Pove Yekantham</span>
+                    <span class="songlistplay"><span class="timestamp">3:41<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/cover10.jpg" alt="1">
-                    <span class="songName">Naa Madhi</span>
-                    <span class="songlistplay"><span class="timestamp">2:54<i id="9" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
+                    <img src="telugu/covers/cover10.jpeg" alt="1">
+                    <span class="songName">Chiguraku Chatu Chilaka</span>
+                    <span class="songlistplay"><span class="timestamp">5:12<i id="9" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
             </div>
         </div>
         <div class="songBanner"></div>
     </div>
-
+    <div class="songclassification">
+        <div class="languages">
+            <table align="center">
+                <div class="heading">
+                <h3 align="center">LANGUAGES</h3>
+                </div>
+                <tr>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='telugu.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='hindi.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='english.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='tamil.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='malayalam.html'"></td>
+                </tr>
+            </table>
+        </div>
+        <div class="categories">
+            <table align="center">
+                <div class="heading">
+                <h3 align="center">CATEGORIES</h3>
+                </div>
+                <tr>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
+                </tr>
+            </table>
+        </div>
+        <div class="Albums">
+            <table align="center">
+                <div class="heading">
+                <h3 align="center">ALBUMS</h3>
+                </div>
+                <tr>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
+                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
     <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
-            <i class="fa-solid fa-3x fa-backward-step" id="previous"></i>
-            <i class="fa-regular fa-3x fa-circle-play" id="masterPlay"></i>
-            <i class="fa-solid fa-3x fa-forward-step" id="next"></i>
+            <i class="fa-solid fa-2x fa-backward-step" id="previous"></i>
+            <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
+            <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="images/playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span>
+            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
