--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h3 align="center">LANGUAGES</h3>
                 </div>
                 <tr>
-                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
+                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='telugu.html'" width="225"></td>
                     <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
                     <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
                     <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
