--- a/telugu.html
+++ b/telugu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify - Your favourite music is here</title>
+    <title id="title">Spotify - Your favourite music is here</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -62,7 +62,7 @@
                     <span class="songlistplay"><span class="timestamp">3:34<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="telugu/covers/cover5.jpeg" alt="1">
+                    <img src="telugu/covers/cover5.jpeg" width="100" height="43" alt="1">
                     <span class="songName">Buttabomma</span>
                     <span class="songlistplay"><span class="timestamp">3:18<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
@@ -148,7 +148,7 @@
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span>
+            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Mastaaru Mastaaru</span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
