--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <span class="songlistplay"><span class="timestamp">2:51<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="general/covers/cover2.jpg" alt="1">
+                    <img src="general/covers/cover2.jpg" alt="1" height="45">
                     <span class="songName">Play Date</span>
                     <span class="songlistplay"><span class="timestamp">2:59<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
@@ -73,17 +73,17 @@
                     <span class="songlistplay"><span class="timestamp">2:53<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="general/covers/cover7.jpg" alt="1">
+                    <img src="general/covers/cover7.jpg" alt="1" height="45">
                     <span class="songName">Tera Chehra</span>
                     <span class="songlistplay"><span class="timestamp">4:34<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="general/covers/cover8.jpg" alt="1">
+                    <img src="general/covers/cover8.jpg" alt="1" height="45">
                     <span class="songName">Kolu Kolu</span>
                     <span class="songlistplay"><span class="timestamp">4:01<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="general/covers/cover9.jpg" alt="1">
+                    <img src="general/covers/cover9.jpg" alt="1" height="45">
                     <span class="songName">Jab Saiyaan</span>
                     <span class="songlistplay"><span class="timestamp">4:07<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
                 </div>
