Added search result

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <div class="search">
                 <i class="fa-solid fa-magnifying-glass fa-1.5x"></i>
                 <input type="text" placeholder="Search Music...">
+                <div class="search_result">
+                    <!--<a href="#" class="card">
+                        <img src="general/covers/cover1.jpg" alt="">
+                        <div class="content">Your Eyes</div>
+                    </a>-->
+                </div>
             </div>
         </ul>
     </nav>
