--- a/index.html
+++ b/index.html
@@ -51,58 +51,7 @@
     <div class="container">
         <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
-            <div class="songItemContainer">
-                <div class="songItem">
-                    <img src="general/covers/cover1.jpg" alt="1">
-                    <span class="songName">Your Eyes</span>
-                    <span class="songlistplay"><span class="timestamp">2:51<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover2.jpg" alt="1" height="45">
-                    <span class="songName">Play Date</span>
-                    <span class="songlistplay"><span class="timestamp">2:59<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover3.jpg" alt="1">
-                    <span class="songName">SaiRat Zaale ji</span>
-                    <span class="songlistplay"><span class="timestamp">6:10<i id="2" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover4.jpg" alt="1">
-                    <span class="songName">Shikhayat</span>
-                    <span class="songlistplay"><span class="timestamp">4:09<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover5.jpg" alt="1">
-                    <span class="songName">Love Story</span>
-                    <span class="songlistplay"><span class="timestamp">3:56<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover6.jpg" alt="1">
-                    <span class="songName">Day Dreamin</span>
-                    <span class="songlistplay"><span class="timestamp">2:53<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover7.jpg" alt="1" height="45">
-                    <span class="songName">Tera Chehra</span>
-                    <span class="songlistplay"><span class="timestamp">4:34<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover8.jpg" alt="1" height="45">
-                    <span class="songName">Kolu Kolu</span>
-                    <span class="songlistplay"><span class="timestamp">4:01<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover9.jpg" alt="1" height="45">
-                    <span class="songName">Jab Saiyaan</span>
-                    <span class="songlistplay"><span class="timestamp">4:07<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="general/covers/cover10.jpg" alt="1">
-                    <span class="songName">Naa Madhi</span>
-                    <span class="songlistplay"><span class="timestamp">2:54<i id="9" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-            </div>
+            <div class="songItemContainer"></div>
         </div>
         <div class="songBanner"></div>
     </div>
@@ -165,7 +114,7 @@
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span>
+            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Your Eyes</span> <span id="end" align="right"></span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
