--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="songInfo">
             <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName"></span><span id="end" class="end"></span>
-                <span class="vol"><i class="fa-solid vol-icon fa-volume-high"></i><input id="volumebar" type="range" min="0" max="100" value="100" step="10"></span>
+                <span class="vol"><i class="fa-solid vol-icon fa-volume-high" id="vol-icon"></i><input id="volumebar" type="range" min="0" max="100" value="100" step="10"></span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
