--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
+            <i class="fa-solid fa-2x fa-backward-fast" id="backward"></i>
             <i class="fa-solid fa-2x fa-backward-step" id="previous"></i>
             <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
+            <i class="fa-solid fa-2x fa-forward-fast" id="forward"></i>
         </div>
         <div class="songInfo">
             <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName"></span><span id="end" class="end"></span>
