Added voice search

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
             <li><a href="#">About</a></li>
             <li>
                 <div class="dropdown">
-                    <button class="dropbtn">Dropdown 
+                    <button class="dropbtn">Languages 
                       <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                      <a href="#">Link 1</a>
-                      <a href="#">Link 2</a>
-                      <a href="#">Link 3</a>
+                      <a href="#">Telugu</a>
+                      <a href="#">Hindi</a>
+                      <a href="#">English</a>
+                      <a href="#">Tamil</a>
+                      <a href="#">Malayalam</a>
                     </div>
                 </div>
             </li>
@@ -42,6 +44,7 @@
                         <i class="fa-solid fa-magnifying-glass fa-1.5x search-icon"></i>
                     </span>
                     <i class="fa-solid fa-xmark close-icon"></i>
+                    <i class="fa-solid fa-microphone voice-search" id="voice-search"></i>
                 </div>
                 <div class="search_result">
                     <!--<a href="#" class="card">
