--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
             <i class="fa-solid fa-2x fa-forward-fast" id="forward"></i>
+            <a href="" title="Switch to video" id="videoquery"><i class="fa-brands fa-2x fa-youtube" id="play-video"></i></a>
         </div>
         <div class="songInfo">
             <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName"></span><span id="end" class="end"></span>
