--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="search_result">
                     <!--<a href="#" class="card">
-                        <img src="general/covers/1.jpg" alt="">
+                        <img src="covers/1.jpg" alt="">
                         <div class="content">Your Eyes</div>
                     </a>-->
                 </div>
