--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
                     <button class="dropbtn" onclick="window.location.href='index.html'">Home</button>
                     <div class="dropdown-content">
                       <a href="#languages">Languages</a>
-                      <a href="#categories">Categories</a>
-                      <a href="#albums">Albums</a>
                     </div>
                 </div>
             </li>
@@ -30,11 +28,10 @@
                       <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                      <a href="#">Telugu</a>
-                      <a href="#">Hindi</a>
-                      <a href="#">English</a>
-                      <a href="#">Tamil</a>
-                      <a href="#">Malayalam</a>
+                      <a href="telugu.html">Telugu</a>
+                      <a href="hindi.html">Hindi</a>
+                      <a href="english.html">English</a>
+                      <a href="tamil.html">Tamil</a>
                     </div>
                 </div>
             </li>
@@ -72,10 +69,9 @@
             </div>
             <div class="grid">
                     <img class="btn1" src="images/telugu.jpeg" onclick="window.location.href='telugu.html'" width="225">
-                    <img class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'">
-                    <img class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'">
-                    <img class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'">
-                    <img class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'">
+                    <img class="btn1" src="images/hindi.jpeg" onclick="window.location.href='hindi.html'">
+                    <img class="btn1" src="images/english.jpeg" onclick="window.location.href='english.html'">
+                    <img class="btn1" src="images/tamil.jpeg" onclick="window.location.href='tamil.html'">
             </div>
         </div>
         </section>
