--- a/telugu.html
+++ b/telugu.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Spotify - Your favourite music is here</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <section id="home">
     <nav>
         <ul>
             <li class="brand"><img class="btn" src="images/logo.png" alt="Spotify"> Spotify</li>
@@ -15,140 +17,79 @@
                 <div class="dropdown">
                     <button class="dropbtn" onclick="window.location.href='index.html'">Home</button>
                     <div class="dropdown-content">
-                      <a href="index.html#languages">Languages</a>
-                      <a href="index.html#categories">Categories</a>
-                      <a href="index.html#albums">Albums</a>
+                      <a href="#languages">Languages</a>
                     </div>
                 </div>
             </li>
             <li><a href="#">About</a></li>
             <li>
                 <div class="dropdown">
-                    <button class="dropbtn">Dropdown 
+                    <button class="dropbtn">Languages 
                       <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
-                      <a href="#">Link 1</a>
-                      <a href="#">Link 2</a>
-                      <a href="#">Link 3</a>
+                      <a href="telugu.html">Telugu</a>
+                      <a href="hindi.html">Hindi</a>
+                      <a href="english.html">English</a>
+                      <a href="tamil.html">Tamil</a>
                     </div>
-                  </div>
+                </div>
             </li>
+            <div class="search">
+                <div class="searchbox" id="search">
+                    <input type="text" id="text" placeholder="">
+                    <span class="icon">
+                        <i class="fa-solid fa-magnifying-glass fa-1.5x search-icon"></i>
+                    </span>
+                    <i class="fa-solid fa-xmark close-icon"></i>
+                    <i class="fa-solid fa-microphone voice-search" id="voice-search"></i>
+                </div>
+                <div class="search_result">
+                    <!--<a href="#" class="card">
+                        <img src="covers/1.jpg" alt="">
+                        <div class="content">Your Eyes</div>
+                    </a>-->
+                </div>
+            </div>
         </ul>
     </nav>
-
+    </section>
     <div class="container">
         <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
-            <div class="songItemContainer">
-                <div class="songItem">
-                    <img src="telugu/covers/cover1.jpg" alt="1">
-                    <span class="songName">Mastaaru Mastaaru</span>
-                    <span class="songlistplay"><span class="timestamp">4:07<i id="0" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover2.jpeg" alt="1">
-                    <span class="songName">Nee Paata Madhuram</span>
-                    <span class="songlistplay"><span class="timestamp">4:23<i id="1" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover3.jpeg" alt="1">
-                    <span class="songName">Vikram Title track</span>
-                    <span class="songlistplay"><span class="timestamp">3:38<i id="2" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover4.jpeg" alt="1">
-                    <span class="songName">Naatu Naatu</span>
-                    <span class="songlistplay"><span class="timestamp">3:34<i id="3" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover5.jpeg" width="100" height="43" alt="1">
-                    <span class="songName">Buttabomma</span>
-                    <span class="songlistplay"><span class="timestamp">3:18<i id="4" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover6.jpeg" alt="1">
-                    <span class="songName">Maate Vinadhuga</span>
-                    <span class="songlistplay"><span class="timestamp">4:35<i id="5" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover7.jpeg" alt="1">
-                    <span class="songName">Top Lesi Poddi</span>
-                    <span class="songlistplay"><span class="timestamp">4:17<i id="6" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover8.jpeg" alt="1">
-                    <span class="songName">Megham Karigena</span>
-                    <span class="songlistplay"><span class="timestamp">4:50<i id="7" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover9.jpeg" alt="1">
-                    <span class="songName">Po Pove Yekantham</span>
-                    <span class="songlistplay"><span class="timestamp">3:41<i id="8" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="telugu/covers/cover10.jpeg" alt="1">
-                    <span class="songName">Chiguraku Chatu Chilaka</span>
-                    <span class="songlistplay"><span class="timestamp">5:12<i id="9" class="fa-regular songItemPlay fa-circle-play"></i></span></span>
-                </div>
-            </div>
+            <div class="songItemContainer"></div>
         </div>
         <div class="songBanner"></div>
     </div>
     <div class="songclassification">
+        <section id="languages">
         <div class="languages">
-            <table align="center">
-                <div class="heading">
+            <div class="heading">
                 <h3 align="center">LANGUAGES</h3>
-                </div>
-                <tr>
-                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='telugu.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='hindi.html'"></td>
-                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='english.html'"></td>
-                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='tamil.html'"></td>
-                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='malayalam.html'"></td>
-                </tr>
-            </table>
+            </div>
+            <div class="grid">
+                    <img class="btn1" src="images/telugu.jpeg" onclick="window.location.href='telugu.html'" width="225">
+                    <img class="btn1" src="images/hindi.jpeg" onclick="window.location.href='hindi.html'">
+                    <img class="btn1" src="images/english.jpeg" onclick="window.location.href='english.html'">
+                    <img class="btn1" src="images/tamil.jpeg" onclick="window.location.href='tamil.html'">
+            </div>
         </div>
-        <div class="categories">
-            <table align="center">
-                <div class="heading">
-                <h3 align="center">CATEGORIES</h3>
-                </div>
-                <tr>
-                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
-                </tr>
-            </table>
-        </div>
-        <div class="Albums">
-            <table align="center">
-                <div class="heading">
-                <h3 align="center">ALBUMS</h3>
-                </div>
-                <tr>
-                    <td><input type="image" class="btn1" src="images/telugu.jpeg" onclick="window.location.href='general/index.html'" width="225"></td>
-                    <td><input type="image" class="btn1" src="images/hindi.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/english.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/tamil.jpeg" onclick="window.location.href='general/index.html'"></td>
-                    <td><input type="image" class="btn1" src="images/malayalam.jpeg" onclick="window.location.href='general/index.html'"></td>
-                </tr>
-            </table>
-        </div>
+        </section>
     </div>
     <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
+            <i class="fa-solid fa-2x fa-backward-fast" id="backward"></i>
             <i class="fa-solid fa-2x fa-backward-step" id="previous"></i>
             <i class="fa-regular fa-2x fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-2x fa-forward-step" id="next"></i>
+            <i class="fa-solid fa-2x fa-forward-fast" id="forward"></i>
+            <a href="" title="Switch to video" id="videoquery"><i class="fa-brands fa-2x fa-youtube" id="play-video"></i></a>
         </div>
         <div class="songInfo">
-            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName">Mastaaru Mastaaru</span>
+            <img src="images/playing.gif" width="30px" height="30px" alt="" id="gif"> <span id="masterSongName"></span><span id="end" class="end"></span>
+                <span class="vol"><i class="fa-solid vol-icon fa-volume-high" id="vol-icon"></i><input id="volumebar" type="range" min="0" max="100" value="100" step="10"></span>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5fcf5458b0.js" crossorigin="anonymous"></script>
