--- a/index.html
+++ b/index.html
@@ -81,21 +81,31 @@
                   <li><a class="dropdown-item" href="#">Tamil</a></li>
                 </ul>
               </li> 
-              <div class="d-flex">
-              <div class="input-group ms-auto p-2">
-                <div id="navbar-search-autocomplete" class="form-outline">
+            </ul>
+            <ul class="navbar-nav ms-auto" style="margin-right: 120px;">
+              <div class="input-group">
+                <div id="navbar-search-autocomplete" class="form-outline" style="width: 300px;">
                   <input type="search" placeholder="Search Your Music..." id="form1" class="form-control" />
                 </div>
                 <button type="button" class="btn btn-primary" style="height: 41px;">
                   <i class="fas fa-search"></i>
                 </button>
               </div>
+            <ul>
+            <ul class="search-card">
+              <div class="search">
+                <div class="search_result">
+                    <!--<a href="#" class="card">
+                        <img src="covers/1.jpg" alt="">
+                        <div class="content">Your Eyes</div>
+                    </a>-->
+                </div>
               </div>
             </ul>
           </div>
         </div>
     </nav>
-    <div class="container mt-8">
+    <div class="container">
         <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer"></div>
